--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -1,6 +1,7 @@
 {% include header.html %}
-<body>
-	
+
+<body class="inverse">
+
 	<div class="wrapper">
 		<header class="header">
 			<div class="header_title">
@@ -13,18 +14,11 @@
 		</header>
 
 		<main id="main" class="main">
-			<ul class="article_list">
-			  {% for post in site.posts %}
+			<article class="article">
 
-			    <li>
-			      <a class="article_list_item" href="{{ post.url }}">
-			      	<h1>{{ post.title }}</h1>
-			      	<date>{{ post.date | date_to_long_string }}</date>
-			      </a>
-			    </li>
+				{{ content }}
 
-			  {% endfor %}
-			</ul>
+			</article>
 		</main>
 	</div>
 
