New old post & animation changes

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -6,3 +6,15 @@
 	<link rel="stylesheet" href="{{ site.url }}/css/styles.css">
 	<link href='http://fonts.googleapis.com/css?family=Abel|Alegreya+Sans:300,500,300italic,500italic' rel='stylesheet' type='text/css'>
 </head>
+<body {{ include.param }}>
+	
+	<div class="wrapper">
+		<header class="header">
+			<div class="header_title">
+				<h1 class="title">Front-end developer&#8217;s musings</h1>
+				<h2 class="subtitle">by Marek Pietrzak</h2>
+			</div>
+			<!-- <nav class="nav">
+				<li><a href="/about.html" class="nav_item" data-short="i"><span>About</span></a></li>
+			</nav> -->
+		</header>
