progress on article

--- a/src/css/variables.css
+++ b/src/css/variables.css
@@ -7,7 +7,8 @@
   --darkBrown: #27221c;
   --lightBrown: #27221c60;
   --lighterBrown: #27221c20;
+  --gray: #dfdfd9;
   --lightGray: #e6e6e0;
-  --lighterGray: #e6e6e080;
+  --lighterGray: #e6e6e099;
   --red: #a03030;
 }
