--- a/src/css/general.css
+++ b/src/css/general.css
@@ -47,3 +47,8 @@ hr {
   margin: 1.5rem 0;
   background-color: var(--lightBrown);
 }
+blockquote {
+  padding: 1rem 1.5rem;
+  background-color: var(--gray);
+  border-left: 0.2rem solid var(--red);
+}
