--- a/src/css/prism.css
+++ b/src/css/prism.css
@@ -33,12 +33,17 @@ pre[class*="language-"] {
 }
 
 /* Inline code */
-:not(pre) > code[class*="language-"] {
+:not(pre) > code[class*="language-"],
+kbd {
   font-size: 0.9em;
   color: var(--darkBrown);
   background: var(--lighterBrown);
   padding: 0 0.2em;
   white-space: normal;
+}
+
+kbd {
+  white-space: nowrap;
 }
 
 .token.comment,
