--- a/src/css/general.css
+++ b/src/css/general.css
@@ -19,7 +19,8 @@ html {
   }
 }
 body {
-  background-color: var(--darkBrown);
+  color: var(--contentText);
+  background-color: var(--outsideBackground);
   overflow-y: scroll;
   font-family: system-ui, -apple-system, sans-serif;
   font-size: 1.125rem;
@@ -33,7 +34,7 @@ h3 {
     Georgia, serif;
 }
 a {
-  color: var(--red);
+  color: var(--accentText);
   text-decoration: none;
 
   &:hover,
@@ -45,10 +46,10 @@ hr {
   border: none;
   height: 1px;
   margin: 1.5rem 0;
-  background-color: var(--lightBrown);
+  background-color: var(--markedText);
 }
 blockquote {
   padding: 1rem 1.5rem;
-  background-color: var(--gray);
-  border-left: 0.2rem solid var(--red);
+  background-color: var(--blockquoteBackground);
+  border-left: 0.2rem solid var(--accent);
 }
