--- a/src/css/prism.css
+++ b/src/css/prism.css
@@ -36,8 +36,8 @@ pre[class*="language-"] {
 :not(pre) > code[class*="language-"],
 kbd {
   font-size: 0.9em;
-  color: var(--darkBrown);
-  background: var(--lighterBrown);
+  color: var(--contentText);
+  background: var(--markedText);
   padding: 0 0.2em;
   white-space: normal;
 }
